# website

./: README.md  app.css  app.py  package.json  pyproject.toml  tailwind.config.js
.github/: FUNDING.yml
src/: __init__.py  github.py
static/: style.css
templates/: base.jinja2  index.jinja2  projects.jinja2
