[tool.poetry]
name = "waifutech"
version = "0.1.0"
description = "A website for the org WaifuTech"
authors = ["glitchy <thepatheticweebgamer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^1.55"
python-dotenv = "^0.20.0"
quart = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
